# conectores

aranda/: .env.example  README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
aranda/docs/: index.html
aranda/lib/: pyproject.toml
aranda/lib/ruvic_aranda_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
google-chat/: .env.example  README.md  SKILL.md  University AI Assistant.json  manifest.json  test_connection.py  validate_local.py
google-chat/docs/: index.html
google-chat/lib/: pyproject.toml
google-chat/lib/ruvic_gchat_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
jira/: .env.example  README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
jira/docs/: index.html
jira/lib/: pyproject.toml
jira/lib/ruvic_jira_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
slack/: .env.example  README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
slack/docs/: index.html
slack/lib/: pyproject.toml
slack/lib/ruvic_slack_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
telegram/: .gitignore  README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
telegram/docs/: index.html
telegram/lib/: pyproject.toml
telegram/lib/ruvic_telegram_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
twilio/: .env.example  README.md  SKILL.md  manifest.json  test_connection.py  validate_local.py
twilio/docs/: index.html
twilio/lib/: pyproject.toml
twilio/lib/ruvic_twilio_sms_connector/: __init__.py  client.py  config.py  exceptions.py  logging_utils.py
