[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-gchat-connector"
version = "1.0.0"
description = "Conector Ruvic para Google Chat: mensajería a espacios vía webhook o Chat API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
    "google-auth>=2.28,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_gchat_connector*"]
