[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-jira-connector"
version = "1.0.0"
description = "Conector Ruvic para Jira Cloud (REST v3): crear, actualizar, transicionar, comentar y buscar tickets"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_jira_connector*"]
