[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruvic-telegram-connector"
version = "1.0.0"
description = "Conector Ruvic para Telegram (Bot API): mensajes, archivos y actualizaciones"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
]

[tool.setuptools.packages.find]
include = ["ruvic_telegram_connector*"]
